--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
+    "sweetalert2": "^11.11.1",
     "vconsole": "^3.15.1"
   },
   "devDependencies": {
